--- a/style.css
+++ b/style.css
@@ -112,8 +112,9 @@ position: relative;
       .container {
         display: flex;
         justify-content: space-between;
-        margin-top: 50px;
+        margin-top: 5%;
         margin-bottom: 30px;
+        margin-left: 5%;
     }
     .text-section {
         width: 50%;
@@ -121,7 +122,7 @@ position: relative;
     .image-section {
         width: 40%;
         height: 30%;
-        margin-right: 150px;
+        margin-right: 5%;
     }
     .title {
       font-size: 24px;
@@ -144,6 +145,7 @@ position: relative;
       border-radius: 5px;
       font-size: 20px;
       margin: 20px 2px;
+      margin-bottom:4% ;
       cursor: pointer;
   }
   /* --destination styles */
@@ -156,14 +158,12 @@ position: relative;
 
   }
 
-  .container {
+  .container-p {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2 ,1fr );
     gap: 10px;
     
   }
-
-
 
   .destination {
     position: relative;
@@ -172,17 +172,8 @@ position: relative;
   .destination img {
     width: auto;
     height: auto;
-    margin-left: 2%;
-    margin-right: 20%;
-    
-  }
-
-  .destination-vertical img {
-
-    margin-left: 50%;
-    margin-right: 50%;
-    text-align: center;
-  
+    margin-left: 5%;
+    margin-right: 0%;
     
   }
 
@@ -194,13 +185,21 @@ position: relative;
     font-size: 25px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
+  .destination-vertical img {
 
-  .destination-vertical .label-text {
+    margin-left: 50%;
+    margin-right: 50%;
+    margin-top: 2%;
+    /* text-align: center; */
+
+  }
+
+  .destination-vertical label {
     position: absolute;
-    /* bottom: 100px; */
-    left: 605px;
-    color:blueviolet;
-    font-size: 30px;
+    bottom: 100px;
+    left: 125px;
+    color:rgb(42, 163, 31);
+    font-size: 25px;
     text-align: center;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     
@@ -209,35 +208,68 @@ position: relative;
   
   .features{
     margin-top: 130px;
-    display: flex;
+    /* display: flex; */
     gap: 150px;
+    margin-top: 10%;
+    margin-bottom: 5%;
+    margin-left: 10%;
+    margin-right: 10%;
   }
   
-  .feature-content-title {
+  .feature-content {
     text-align: center ;
+    margin-bottom: 5%;
     
   }
-  
-  .feature-content .card{
+  .feature-content h3{
+    font: bolder;
+    font-size: 2rem;
+    margin: 1%;
+  }
+  .features .card{
+    display: grid;
+    grid-template-columns: repeat(2 , 1fr);
+    gap:20px;
+
+  }
+  .features .card1{
     display: grid;
     padding: 30px;
     margin-bottom: 20px;
     border-radius: 8px;
-    background: #d62a2a;
+    background: #dcd2d2;
     box-shadow: 0px  4px 30px 0px ;
   }
-/* CSS code */
-* {
+  .features .card2{
+    display: grid; 
+    padding: 30px;
+   margin-bottom: 20px;
+   border-radius: 8px;
+   background: #dcd2d2;
+   box-shadow: 0px  4px 30px 0px ;
+ }
+ .features .card3{
+  display: grid;
+ padding: 30px;
+ margin-bottom: 20px;
+ border-radius: 8px;
+ background: #dcd2d2;
+ box-shadow: 0px  4px 30px 0px ;
+} 
+  
+  
+
+/* CSS code
+/* * {
   /* box-sizing: border-box; */
-  margin: 0;
+  /* margin: 0;
   padding: 0;
-}
+} */  
 
 .container1 {
   display: flex;
-  height: 100vh;
+  /* height: 100vh; */
   padding-top: 10%;
-  
   gap: 10%;
 }
 
@@ -249,13 +281,13 @@ position: relative;
 }
 
 .left h1 {
-  font-size: 48px;
+  font-size: 40px;
   color: #333;
 }
 
 .left p {
   font-size:20px;
-  color: #c5c1c1;
+  color: #853df0;
   margin-top: 1rem;
 }
 
@@ -283,8 +315,8 @@ position: relative;
 }
 
 .right {
-  width: 50%;
-  padding: 32px;
+  width: 100%;
+  padding: 22px;
   text-align: center;
   justify-content: center;
   
@@ -293,6 +325,7 @@ position: relative;
 
 .right h2 {
   font-size: 32px;
+  text-align: center;
   color: #333;
   
 }
@@ -308,7 +341,8 @@ position: relative;
 
 .container2 {
   padding-top: 10%;
-  margin-top: auto;
+  margin-top: 3%;
+  margin-bottom: 5%;
   display: flex;
   /* width: 50%; */
   height: auto;
